# python-project-samples

project-with-pip/: README.md  app.py
project-with-poetry/: README.md  pyproject.toml
